--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
             src="https://see.fontimg.com/api/rf5/oxRx/Y2M3NmVhMjQwMTdlNGRkYTgzN2Y2NTVjNTViYTI4NGMudHRm/RGV2aW91cw/knockout-regular.png?r=fs&h=51&w=1000&fg=061048&bg=FAFAFA&tb=1&s=51"
             alt="Game Banner - Replace with descriptive text"
             class="w-50 h-auto mb-4 rounded-md shadow-sm game-banner-image mx-auto"
-            onerror="this.onerror=null; this.src='https://placehold.co/800x150/cccccc/ffffff?text=Image+Error';"
-         >
+            onerror="this.onerror=null; this.src='https://placehold.co/800x150/cccccc/ffffff?text=Image+Error';">
         <h2 class="text-1xl font-bold mb-2 text-stone-600">Aesthete or addlepate?</h2>
         <h2 class="text-1xl font-regular mb-2 text-stone-600">Solve the cunning cultural puzzle to find out!</h2>
         <div id="source-type-emoji" class="text-5xl mb-2"></div> 
-         <div id="puzzle-title" class="text-lg text-stone-700">Solve the clues to find the link!</div>
          <div id="score-display"></div>
          </header>
 
