--- a/index.html
+++ b/index.html
@@ -177,9 +177,12 @@
     </style>
 </head>
 <body class="flex flex-col items-center min-h-screen p-4 bg-stone-100">
-
+    <header class="text-center mb-4">
+    <h1 class="text-4xl font-bold mb-2 text-stone-800"></h1>
+    <div id="puzzle-title" class="text-lg text-stone-700"></div>
+    <div id="source-type-emoji" class="text-2xl mb-2"></div>
+</header>
     
-
     <div id="message-area" class="h-10 mb-4 text-center font-medium"></div>
 
     <div id="missing-link-grid" class="missing-link-grid">
@@ -233,7 +236,7 @@
             solvedPhase2Count = 0;
             gameComplete = false;
             messageAreaEl.textContent = '';
-            puzzleTitleEl.textContent = 'Solve the clues to find the link!';
+            puzzleTitleEl.textContent = '';
             emojiIndicatorEl.textContent = gameData.sourceTypeEmoji || '';
             gameData.clues.forEach(clue => clue.solved = false);
             gameData.phase2Clues.forEach(clue => clue.solved = false);
