--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devious</title>
+    <title>Oblique</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,14 +12,40 @@
    
 <body class="flex flex-col items-center min-h-screen p-4"> <header class="text-center mb-6 w-full max-w-3xl">
          <img
-            src="https://see.fontimg.com/api/rf5/oxRx/Y2M3NmVhMjQwMTdlNGRkYTgzN2Y2NTVjNTViYTI4NGMudHRm/RGV2aW91cw/knockout-regular.png?r=fs&h=51&w=1000&fg=061048&bg=FAFAFA&tb=1&s=51"
+            src="https://see.fontimg.com/api/rf5/K07Z/YTY3ZTg0NGVmNWE4NDk3NjgzODI2MzRjNzg5ZWM1ZmIuVFRG/T2JsaXF1RQ/nippon-blocks.png?r=fs&h=58&w=1000&fg=0C1442&bg=FFFFFF&tb=1&s=58"
             alt="Game Banner - Replace with descriptive text"
             class="w-50 h-auto mb-4 rounded-md shadow-sm game-banner-image mx-auto"
             onerror="this.onerror=null; this.src='https://placehold.co/800x150/cccccc/ffffff?text=Image+Error';">
-        <h2 class="text-1xl font-bold mb-2 text-stone-600">Aesthete or addlepate?</h2>
-        <h2 class="text-1xl font-regular mb-2 text-stone-600">Solve the cunning cultural puzzle to find out!</h2>
-        <div id="source-type-emoji" class="text-5xl mb-2"></div> 
+        <h2 class="text-1xl font-bold mb-2 text-stone-600"></h2>
+        <h2 class="text-1xl font-regular mb-2 text-stone-600">Can you solve today's slightly oblique cultural puzzle?</h2>
+        <div id="source-type-emoji" class="text-2xl mb-2"></div> 
          <div id="score-display"></div>
+    <!-- Add this inside the <body> tag -->
+<button id="howToPlayButton" title="How to Play" 
+    class="fixed bottom-4 right-4 w-12 h-12 bg-gray-800 text-white rounded-full shadow-lg flex items-center justify-center text-lg hover:bg-gray-700 z-50">
+    ?
+</button>
+
+<!-- Add a hidden modal for instructions -->
+<div id="howToPlayModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full">
+        <h3 class="text-xl font-bold mb-4 text-center">How to Play</h3>
+        <p class="text-gray-700 text-sm mb-4">
+            Solve the cryptic cultural puzzle by completing each phase:
+            <br><br>
+            - **Phase 1:** Solve the clues around the center box.
+            <br>
+            - **Phase 2:** Solve the four corner clues after Phase 1.
+            <br>
+            - **Phase 3:** Solve the final clue in the center box.
+            <br><br>
+            Click on a box to answer, and submit your guess. Good luck!
+        </p>
+        <button id="closeModalButton" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-700 w-full">
+            Got it!
+        </button>
+    </div>
+</div>
          </header>
 
     <div id="message-area" class="h-10 mb-4 text-center font-medium"></div>
@@ -28,154 +55,7 @@
 
      <div id="solutions-modal-container"></div>
 
- <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f5f5f4;
-        }
-        h1 {
-            font-family: 'Bungee Outline', Sans-Serif;
-            font-weight: 400;
-        }
-
-        /* --- Animations --- */
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            10%, 30%, 50%, 70%, 90% { transform: translateX(-6px); }
-            20%, 40%, 60%, 80% { transform: translateX(6px); }
-        }
-        .shake { animation: shake 0.5s ease-in-out; }
-        @keyframes reveal {
-            0% { transform: scale(0.5); opacity: 0; }
-            80% { transform: scale(1.05); }
-            100% { transform: scale(1); opacity: 1; }
-        }
-        .final-celebration { animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite; }
-        @keyframes pulse {
-          0%, 100% { opacity: 1; }
-          50% { opacity: .7; }
-        }
-
-        /* --- General Styles --- */
-        #source-type-emoji {
-            font-size: 3rem; line-height: 1; margin-bottom: 0.5rem;
-        }
-        #puzzle-title {
-            color: #44403c;
-        }
-
-        /* Grid container */
-        .missing-link-grid {
-            display: grid;
-            grid-template-columns: repeat(3, minmax(120px, 1fr));
-            grid-template-rows: repeat(3, minmax(100px, 1fr));
-            gap: 1rem; width: 100%; max-width: 500px; aspect-ratio: 1 / 1; margin-bottom: 1.5rem;
-        }
-
-        /* Central Missing Link Box */
-        .missing-link-center {
-            grid-column: 2 / 3;
-            grid-row: 2 / 3;
-            display: flex; flex-direction: column; align-items: center; justify-content: center; background-color: #ffffff; border: 2px solid #d1d5db; border-radius: 0.375rem; padding: 1rem; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); text-align: center;
-        }
-        .missing-link-center input {
-            width: 90%; padding: 6px 10px; border: 1px solid #cbd5e1; border-radius: 0.25rem; margin-bottom: 8px; text-align: center;
-        }
-         .missing-link-center input::placeholder { color: #9ca3af; }
-         .missing-link-center input.input-error { border-color: #ef4444; background-color: #fee2e2; }
-        .missing-link-center button {
-            padding: 4px 12px; font-size: 0.85rem; background-color: #12b093; color: white; border: none; border-radius: 0.25rem; cursor: pointer; transition: background-color 0.2s;
-        }
-        .missing-link-center button:hover:not(:disabled) { background-color: #0e8e77; }
-        .missing-link-center button:disabled { background-color: #6cd4c1; cursor: not-allowed; }
-        .missing-link-center p { font-size: 0.8rem; color: #57534e; margin-bottom: 5px; }
-        .missing-link-center .correct-link {
-            font-weight: 700; font-size: 1.1rem; color: #12b093; animation: reveal 0.6s ease-out forwards;
-        }
-
-        /* --- Clue Box Styles (Phase 1) --- */
-        .clue-box-container {
-            perspective: 1000px; min-height: 100px; height: 100%;
-        }
-        .clue-box-container[data-clue-id='1'] { grid-column: 2 / 3; grid-row: 1 / 2; }
-        .clue-box-container[data-clue-id='2'] { grid-column: 1 / 2; grid-row: 2 / 3; }
-        .clue-box-container[data-clue-id='3'] { grid-column: 3 / 4; grid-row: 2 / 3; }
-        .clue-box-container[data-clue-id='4'] { grid-column: 2 / 3; grid-row: 3 / 4; }
-
-        .clue-box-inner { position: relative; width: 100%; height: 100%; text-align: center; transition: transform 0.6s; transform-style: preserve-3d; cursor: pointer; }
-        .clue-box-container.is-flipped .clue-box-inner { transform: rotateY(180deg); }
-        .clue-box-front, .clue-box-back { position: absolute; width: 100%; height: 100%; -webkit-backface-visibility: hidden; backface-visibility: hidden; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 0.75rem; border: 2px solid #d1d5db; border-radius: 0.375rem; background-color: #ffffff; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); color: #1f2937; }
-        .clue-box-back { background-color: #f0f9ff; border-color: #7dd3fc; transform: rotateY(180deg); }
-        .clue-box-back input { width: 90%; padding: 4px 8px; border: 1px solid #cbd5e1; border-radius: 0.25rem; margin-bottom: 5px; text-align: center; }
-        .clue-box-back input.input-error { border-color: #ef4444; background-color: #fee2e2; }
-        .clue-box-back button {
-             padding: 3px 10px; font-size: 0.8rem; background-color: #12b093; color: white; border: none; border-radius: 0.25rem; cursor: pointer; transition: background-color 0.2s;
-         }
-        .clue-box-back button:hover { background-color: #0e8e77; }
-        .clue-solved .clue-box-front {
-            background-color: #12b093; border-color: #0e8e77; color: #ffffff; font-weight: 500;
-        }
-        .clue-solved .clue-box-inner { cursor: default; }
-         .puzzle-solved .clue-box-front { opacity: 0.7; }
-         .puzzle-solved .clue-box-inner { cursor: default; }
-
-        /* --- Phase 2 Box Styles --- */
-         .phase2-box {
-             grid-column: var(--col);
-             grid-row: var(--row);
-             background-color: #f0fdfa;
-             border: 2px dashed #5eead4;
-             border-radius: 0.375rem;
-             padding: 0.75rem;
-             display: flex;
-             flex-direction: column;
-             align-items: center;
-             justify-content: center;
-             text-align: center;
-             opacity: 1;
-             pointer-events: none;
-             transition: background-color 0.3s, border-color 0.3s;
-         }
-         .phase2-box > * {
-             opacity: 0;
-             pointer-events: none;
-             transition: opacity 0.4s ease-in-out;
-         }
-         .phase2-box.active {
-             pointer-events: auto;
-         }
-          .phase2-box.active > * {
-             opacity: 1;
-             pointer-events: auto;
-         }
-
-         .phase2-box .arrow {
-             font-size: 1.875rem; line-height: 2.25rem; color: #0f766e; margin-bottom: 0.25rem;
-         }
-         .phase2-box input {
-             width: 85%; padding: 3px 6px; border: 1px solid #99f6e4; border-radius: 0.25rem; margin-bottom: 4px; text-align: center; font-size: 0.8rem;
-         }
-         .phase2-box input.input-error { border-color: #fb7185; background-color: #ffe4e6; }
-         .phase2-box button {
-             padding: 2px 8px; font-size: 0.75rem; background-color: #12b093; color: white; border: none; border-radius: 0.25rem; cursor: pointer; transition: background-color 0.2s;
-         }
-         .phase2-box button:hover:not(:disabled) { background-color: #0e8e77; }
-         .phase2-box button:disabled { background-color: #6cd4c1; cursor: not-allowed; }
-
-         .phase2-box.solved {
-             background-color: #12b093; border-color: #0e8e77; color: #ffffff;
-             pointer-events: none;
-         }
-         .phase2-box.solved > * {
-             opacity: 1;
-             pointer-events: none;
-         }
-         .phase2-box.solved .solution-text {
-             font-weight: 500; font-size: 0.9rem;
-         }
-
-    </style>
-</head>
+  </head>
 <body class="flex flex-col items-center min-h-screen p-4 bg-stone-100">
 
     <header class="text-center mb-4">
@@ -500,9 +380,9 @@
         }
 
          function endGameCelebration() {
-             puzzleTitleEl.textContent = "Puzzle completed!";
+             puzzleTitleEl.textContent = "Oblique completed!";
              messageAreaEl.classList.add('final-celebration');
-             displayMessage('😈 Congratulations! You are truly devious! 😈', 'text-lg font-bold text-purple-600');
+             displayMessage('🧠 Congratulations! You can join the Obliquerati! 🧠', 'text-lg font-bold text-green-600');
          }
 
         // --- Message Functions ---
@@ -519,9 +399,37 @@
                  messageAreaEl.className = 'h-10 mb-4 text-center font-medium';
              }
         }
+        
+        document.addEventListener('DOMContentLoaded', () => {
+    // --- Initialize Game ---
+    initGame();
 
-        // --- Initialize Game ---
-        document.addEventListener('DOMContentLoaded', initGame);
+    // --- 'How to Play' Modal Logic ---
+    const howToPlayButton = document.getElementById('howToPlayButton');
+    const howToPlayModal = document.getElementById('howToPlayModal');
+    const closeModalButton = document.getElementById('closeModalButton');
+
+    // Show the modal when "How to Play" button is clicked
+    howToPlayButton.addEventListener('click', () => {
+        console.log('Button clicked!');
+        howToPlayModal.classList.remove('hidden');
+        howToPlayModal.classList.add('flex');
+    });
+
+    // Hide the modal when "Got it!" button is clicked
+    closeModalButton.addEventListener('click', () => {
+        howToPlayModal.classList.add('hidden');
+        howToPlayModal.classList.remove('flex');
+    });
+
+    // Hide the modal if the overlay (background) is clicked
+    howToPlayModal.addEventListener('click', (event) => {
+        if (event.target === howToPlayModal) {
+            howToPlayModal.classList.add('hidden');
+            howToPlayModal.classList.remove('flex');
+        }
+    });
+});
     </script>
 
 </body>
