--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
 <body class="flex flex-col items-center min-h-screen p-4"> <header class="text-center mb-6 w-full max-w-3xl">
          <img
-            src="https://see.fontimg.com/api/rf5/01Ev/ZjUwZTJmYzc3NDE4NDYzMjgxYTU0ZDE0Nzc5MDlhMjQudHRm/T0JMSVFVRQ/graze-brk.png?r=fs&h=47&w=1000&fg=0C1442&bg=FFFFFF&tb=1&s=47"
+            src="https://see.fontimg.com/api/rf5/jr40/YzY2YzczZGI3MzIxNDIxOWE2ZmUwOThlZTA5MzMxNGMudHRm/T0JMSVFVRQ/blus-blocks.png?r=dw&h=50&w=1000&fg=0C1442&bg=FFFFFF&s=50"
             alt="Game Banner - Replace with descriptive text"
             class="w-50 h-auto mb-4 rounded-md shadow-sm game-banner-image mx-auto"
             onerror="this.onerror=null; this.src='https://placehold.co/800x150/cccccc/ffffff?text=Image+Error';">
