--- a/index.html
+++ b/index.html
@@ -135,7 +135,25 @@
 
     <div id="missing-link-grid" class="missing-link-grid">
          </div>
+   <!-- Add this inside the <body> tag -->
+<button id="howToPlayButton" title="How to Play" 
+    class="fixed bottom-4 right-4 w-12 h-12 bg-gray-800 text-white rounded-full shadow-lg flex items-center justify-center text-lg hover:bg-gray-700 z-50">
+    ?
+</button>
 
+<!-- Add a hidden modal for instructions -->
+<div id="howToPlayModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded-lg shadow-lg max-w-lg w-full overflow-y-auto max-h-screen">
+    <h2 class="city">How to solve a <b>Devious</b> puzzle, the sly cultural puzzle that tech titans can't solve.</h2>
+    <p class="bum">
+    <b>1:</b> The first four clues point towards the puzzle's crux: a famous cultural work (novel, song, painting, etc.)
+ <br>
+           <b>2:</b> The four corner clues delve deeper into the artwork.
+            <br>
+            <b>3:</b> The final central question completes the puzzle.
+            <br><br>
+            Click on a box to answer, and submit your guess. <br><br><b>Are you a <b>Genius</b> or <b>Jinglebrains</b>? You'll soon find out!</b>
+        </p>
     <script>
         // --- Game Data ---
         const gameData = {
